--- a/Lab 4/lab 4.4
+++ b/Lab 4/lab 4.4
@@ -1,1 +1,17 @@
+import java.util.Calendar
+
+fun main() {
+    val dayNumber = readLine()!!.toInt()
+    
+    when (dayNumber) {
+        1 -> println("Воскресенье")
+        2 -> println("Понедельник")
+        3 -> println("Вторник")
+        4 -> println("Среда")
+        5 -> println("Четверг")
+        6 -> println("Пятница")
+        7 -> println("Суббота")
+        else -> println("Некорректный номер дня недели")
+    }
+}
 
